syntax = "proto3";

package exch_observer_rpc;

service ExchObserver {
    rpc GetPrice (GetPriceRequest) returns (GetPriceResponse) {}
    rpc GetSymbols (GetSymbolsRequest) returns (GetSymbolsResponse) {}
}

message GetPriceRequest {
    string base = 1;
    string quote = 2;
    string exchange = 3;
}

message GetPriceResponse {
    string base = 1;
    string quote = 2;
    double price = 3;
    uint64 timestamp = 4;
}

message GetSymbolsRequest {
    string exchange = 1;
}

message GetSymbolsResponse {
    repeated string symbols = 1;
}
